--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,5 +1,10 @@
 @import "./base/_general-rules.sass"
 
 @import "./pages/_app.sass"
+@import "./pages/_home.sass"
 
 @import "./layout/_navbar.sass"
+@import "./layout/_cart.sass"
+
+@import "./components/_cardhome.sass"
+@import "./components/_cartitem.sass"
