--- a/src/sass/layout/_navbar.sass
+++ b/src/sass/layout/_navbar.sass
@@ -1,10 +1,21 @@
 nav
     width: 100%
-    height: 15vh
+    height: 10vh
+    padding: 0 4.5rem
+    box-sizing: border-box
 
     display: flex
-    justify-content: space-around
+    justify-content: space-between
     align-items: center
+
+    ol
+        width: 30%
+
+        display: flex
+        justify-content: space-between
+
+        li
+            font-weight: 700
 
 
     .cart
@@ -19,4 +30,4 @@ nav
             transform: scale(1.08)
 
         svg
-            width: 20px
+            width: 15px
