adding-redux-features

--- a/src/sass/layout/_cart.sass
+++ b/src/sass/layout/_cart.sass
@@ -2,7 +2,7 @@
     position: absolute
     top: 0
     right: 0
-    width: 30%
+    width: 500px
     height: 100vh
     padding: 2rem 2rem
     box-sizing: border-box
@@ -35,8 +35,6 @@
     .list-item
         width: 95%
         height: 85%
-
-        overflow-y: scroll
 
     .resume-cart
         width: 97%
