--- a/src/sass/layout/_navbar.sass
+++ b/src/sass/layout/_navbar.sass
@@ -19,8 +19,13 @@ nav
 
 
     .cart
+        width: 3%
         padding: .8rem 1rem
         margin-left: 10vw
+
+        display: flex
+        justify-content: space-around
+        font-weight: bolder
 
         background-color: #fff3d5
         border-radius: 99rem
