--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -107,8 +107,15 @@ nav ol li {
 }
 
 nav .cart {
+  width: 3%;
   padding: .8rem 1rem;
   margin-left: 10vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  font-weight: bolder;
   background-color: #fff3d5;
   border-radius: 99rem;
   cursor: pointer;
@@ -127,7 +134,7 @@ nav .cart svg {
   position: absolute;
   top: 0;
   right: 0;
-  width: 30%;
+  width: 500px;
   height: 100vh;
   padding: 2rem 2rem;
   -webkit-box-sizing: border-box;
@@ -171,7 +178,6 @@ nav .cart svg {
 .cart-overlay .list-item {
   width: 95%;
   height: 85%;
-  overflow-y: scroll;
 }
 
 .cart-overlay .resume-cart {
